objects/Case_Type_Mapping__mdt.object
<CustomObject>
    <description>Maps values that are available for selection in the community to values that are available on the case type field in salesforce</description>
    <fields>
        <fullName>Community_Value__c</fullName>
        <description>Value selected in the community picklist</description>
        <label>Community Value</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_to_Field__c</fullName>
        <description>Case field that the value should be mapped to</description>
        <label>Map to Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_to_Value__c</fullName>
        <description>Value to map into the case field</description>
        <label>Map to Value</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case Type Mapping</label>
    <pluralLabel>Case Type Mappings</pluralLabel>
</CustomObject>